# badges

./: Cargo.toml  LICENSE-MIT  README.md
codegen/: Cargo.toml
codegen/src/: lib.rs
src/: badge.rs  colour.rs  font.rs  lib.rs  traits.rs  vendor.rs  xml.rs
