[package]
name = "badges"
version = "0.1.0"
authors = ["Isis <root@5ht2.me>"]
description = "A Rust port of the shields.io badge maker"
license = "MIT/Apache-2.0"
repository = "https://github.com/lmaotrigine/badges-rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.5"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true

[profile.test]
debug = true

[features]
hex_colours = []
